# posture

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md
scripts/: extract_mde.py  extract_qualys.py  extract_salesforce.py  extract_servicenow.py  extract_test.py  extract_wiz.py  intune_introspect.py  wiz_introspect.py
src/posture/: __init__.py  base.py  exceptions.py  parse.py
src/posture/collectors/: _azure_oauth.py  appomni.py  azure_entra.py  cloudflare.py  crowdstrike.py  dnsimple.py  intune.py  jamf.py  knowbe4.py  mde.py  okta.py  phriendly_phishing.py  qualys.py  sailpoint.py  salesforce.json  salesforce.py  servicenow.json  servicenow.py  snyk.py  tenableio.py  tenablesc.py  upguard.py  vanta.py  wiz.py  workspaceone.py
tests/: test_azure_entra.py  test_catalog.py  test_crowdstrike.py  test_intune.py  test_jamf.py  test_knowbe4.py  test_mde.py  test_okta.py  test_parse.py  test_parse_appomni.py  test_parse_azure_entra.py  test_parse_cloudflare.py  test_parse_dnsimple.py  test_parse_intune.py  test_parse_jamf.py  test_parse_knowbe4.py  test_parse_mde.py  test_parse_okta.py  test_parse_phriendly_phishing.py  test_parse_qualys.py  test_parse_sailpoint.py  test_parse_salesforce.py  test_parse_servicenow.py  test_parse_snyk.py  test_parse_tenableio.py  test_parse_tenablesc.py  test_parse_upguard.py  test_parse_vanta.py  test_parse_workspaceone.py  test_posture.py  test_qualys.py  test_redaction.py  test_salesforce.py  test_servicenow.py  test_tenableio.py  test_upguard.py  test_workspaceone.py
tests/fixtures/appomni/: monitored_services_page.json  open_policy_issues_page.json  policies_page.json  unified_identities_page.json
tests/fixtures/azure_entra/: audit_logs_page.json  signins_page.json  users_page.json
tests/fixtures/cloudflare/: cdn_protected_domains_page.json  dns_records_page.json  zones_page.json
tests/fixtures/crowdstrike/: host_groups_page.json  hosts_bad_timestamps.json  hosts_epoch_timestamps.json  hosts_missing_fields.json  hosts_page.json  vulnerabilities_page.json  zta_page.json
tests/fixtures/dnsimple/: domains_page.json
tests/fixtures/intune/: attack_simulation_users_page.json  attack_simulations_page.json  device_configurations_page.json  managed_devices_page.json
tests/fixtures/jamf/: computers_inventory_detail.json  computers_inventory_page.json  policies_page.json
tests/fixtures/knowbe4/: enrollments_page.json  pst_recipients_page.json  psts_page.json
tests/fixtures/mde/: machine_vulnerabilities_page.json  machines_page.json  vulnerabilities_page.json
tests/fixtures/okta/: device_users_page.json  devices_page.json  users_page.json
tests/fixtures/phriendly_phishing/: clicks_page.json  trainings_page.json
tests/fixtures/qualys/: host_detections_page.xml  hosts_page.xml  (+1 more)
(+25 files in other folders)
