[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posture"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Phil Massyn", email = "phil.massyn@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/philmassyn/posture"

[tool.hatch.build.targets.wheel]
packages = ["src/posture"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
