[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posture"
version = "0.4.2"
description = "Runtime-agnostic Python library for CCM (Continuous Control Monitoring) data collection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Phil Massyn", email = "phil.massyn@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tenableio = [
    "pytenable>=1.4",
]
salesforce = [
    "simple-salesforce>=1.12",
]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "black>=24.0",
    "ruff>=0.5",
    "pytenable>=1.4",
    "simple-salesforce>=1.12",
]

[project.urls]
Homepage = "https://github.com/massyn/posture"

[tool.hatch.build.targets.wheel]
packages = ["src/posture"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
